--- a/styles/pages/accueil.css
+++ b/styles/pages/accueil.css
@@ -34,6 +34,23 @@
     text-align: center;
 }
 
+.navbar__cta.btn--primary {
+    display: inline-flex;
+    white-space: nowrap;
+    justify-content: center;
+    align-items: center;
+    width: 180px;
+    height: 50px;
+    color: var(--text-primary);
+    font-family: var(--font-title);
+    font-weight: bold;
+    font-size: 18px;
+}
+.navbar__links a.navbar__cta.btn--primary:hover {
+    color: var(--text-primary);
+}
+
+
 .card {
     margin: 20px;
     max-width: 100%;
@@ -436,9 +453,24 @@
     
 
 }
-@media (max-width: 990px) {
+@media (min-width: 990px) {
     .navbar__user {
         order: -1;
+    }
+    .navbar__cta.btn--primary {
+        display: inline-flex;
+        white-space: nowrap;
+        justify-content: center;
+        align-items: center;
+        width: 180px;
+        height: 50px;
+        color: var(--text-primary);
+        font-family: var(--font-title);
+        font-weight: bold;
+        font-size: 18px;
+    }
+    .navbar__links a.navbar__cta.btn--primary:hover {
+        color: var(--text-primary);
     }
 }
 
